--- a/JA.html
+++ b/JA.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
  
      <!-- Site Metas -->
-    <title>李浩哲的个人网站</title>  
+    <title>イ・ホチョル氏の個人ホームページ</title>  
     <meta name="keywords" content='Haozhe Li, 李浩哲, UIUC, Computer Science'>
     <meta name="description" content='Personal website of Haozhe Li'>
     <meta name="author" content='Haozhe Li'>
@@ -50,24 +50,24 @@
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
 			<img class="img-fluid" src="images/logo_white_small.png" alt="">
 		</a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">菜单<i class="fa fa-bars"></i>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">メニュー<i class="fa fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger active" href="#home">主页</a>
+              <a class="nav-link js-scroll-trigger active" href="#home">ホームページ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">关于</a>
+              <a class="nav-link js-scroll-trigger" href="#about">について</a>
             </li>
 			<li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#resume">简历</a>
+                <a class="nav-link js-scroll-trigger" href="#resume">履歴書</a>
               </li>
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="#portfolio">作品集</a>
               </li>
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#contact">联系</a>
+                <a class="nav-link js-scroll-trigger" href="#contact">つながり</a>
               </li>  
           </ul>
         </div>
@@ -76,16 +76,16 @@
 	
 	<section id="home" class="main-banner parallaxie" style="background: url('uploads/banner.jpg')">
 		<div class="heading">
-			<h1>你好，我是李浩哲</h1>
-            <p>一个普通到再不能普通的普通人</p>
+			<h1>もしもしリ・ホチョルです</h1>
+            <p>普通ではない普通の人</p>
 			<h3 class="cd-headline clip is-full-width">
-				<span>我喜欢</span>
+				<span>好きだ</span>
 				<span class="cd-words-wrapper">
-					<b class="is-visible">编程</b>
-					<b>电影制作</b>
-					<b>视频调色</b>
-					<b>特效</b>
-                    <b>演奏大提琴</b>
+					<b class="is-visible">プログラミング</b>
+					<b>映画製作</b>
+					<b>ビデオ調色</b>
+					<b>特殊効果</b>
+                    <b>チェロを演奏する</b>
 				</span>
 			</h3>
 		</div>
@@ -121,18 +121,18 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="message-box">                        
-                        <h2><b>关于我</b></h2>
-                        <p>大家好，我是李浩哲，或者叫我的英文名Howard，我是伊利诺伊大学计算机科学和音乐专业的学生。“一个热爱编程的大提琴手”是可以定义我的最准确的说法。我从小就学习大提琴，并且作为首席大提琴手参加交响乐团快10年了。进入大学生活后，我逐渐对计算机编程产生了兴趣，并开始学习Python、Java等编程语言。</p>
-						<p>与此同时，我还是一名个人视频创作者。我经常在哔哩哔哩和Youtube上上传VLOG和视频特效的教程，并获得了数百万次观看。</p>
-                        <p>快速链接：</p>
-                        <a href="#contact" class="sim-btn btn-hover-new" data-text="VIEW MORE"><span>联系</span></a>
-                        <a href="#resume" class="sim-btn btn-hover-new" data-text="VIEW MORE"><span>简历</span></a>
+                        <h2><b>私について</b></h2>
+                        <p>こんにちは。私は李浩哲です。英語名をハワードと呼んでいます。イリノイ大学のコンピュータ科学と音楽を専攻しています。「プログラミングが大好きなチェリスト」は、私を定義する最も正確な表現です。私は小さい頃からチェロを習っていて、コンサートチェリストとして交響楽団に参加してもうすぐ10年になります。大学生活に入ると次第にコンピュータプログラミングに興味を持ち、PythonやJavaなどのプログラミング言語を学ぶようになりました。</p>
+						<p>同時に、個人の動画クリエイターとしても活動しています。ビリビリやYoutubeでVLOGやビデオ特殊効果のチュートリアルを頻繁にアップしていて、何百万回も視聴されています。</p>
+                        <p>クイックリンク：</p>
+                        <a href="#contact" class="sim-btn btn-hover-new" data-text="VIEW MORE"><span>つながり</span></a>
+                        <a href="#resume" class="sim-btn btn-hover-new" data-text="VIEW MORE"><span>履歴書</span></a>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 
                 <div class="col-md-6">
                     <div class="right-box-pro wow fadeIn">
-                        <img src="uploads/aboutme.jpg" alt="关于我的照片" class="img-fluid img-rounded">
+                        <img src="uploads/aboutme.jpg" alt="私の写真について" class="img-fluid img-rounded">
                     </div><!-- end media -->
                 </div><!-- end col -->
             </div><!-- end row -->
@@ -142,8 +142,8 @@
 	<div id="resume" class="section wb">
         <div class="container">
             <div class="section-title text-left">
-                <h3>简历</h3>
-                <p align="center">查看我的<a href="uploads/Haozhe Li_Resume.pdf">正式简历</a></p>
+                <h3>履歴書</h3>
+                <p align="center">自分のを表示<a href="uploads/Haozhe Li_Resume.pdf">公式履歴書</a></p>
             </div><!-- end title -->
 
             <div class="row">
@@ -153,10 +153,10 @@
 						<div class="testimonial clearfix">
                             <div class="desc">
                                 <h3><i class="fa fa-quote-left"></i>教育（1/4）</h3>
-                                <p class="lead">伊利诺伊大学厄巴纳-香槟分校<br>计算机科学+音乐学士2022-2026<br>目前平均绩点：4.0<br><br></p>
+                                <p class="lead">イリノイ大学アーバナ・シャンペーン校<br>コンピュータサイエンス+音楽学士2022-2026<br>現在の平均実績：4.0<br><br></p>
                             </div>
                             <div class="testi-meta">
-                                <a href="blogs_CN/education.html"><b>查看更多</b></a>
+                                <a href="blogs_JA/education.html"><b>詳細はこちら</b></a>
                             </div>
                             <!-- end testi-meta -->
                         </div>
@@ -164,33 +164,33 @@
 
                         <div class="testimonial clearfix">
                             <div class="desc">
-                                <h3><i class="fa fa-quote-left"></i>技能（2/4）</h3>
-                                <p class="lead">编程：Java，Python<br>语言：英语和汉语母语<br>影片制作<br>音乐制作<br></p>
+                                <h3><i class="fa fa-quote-left"></i>スキル(2/4)</h3>
+                                <p class="lead">プログラミング：Java,Python<br>言語：英語および中国語母国語<br>映画製作<br>音楽制作<br></p>
                             </div>
                             <div class="testi-meta">
-                                <a href="blogs_CN/skills.html"><b>查看更多</b></a>
+                                <a href="blogs_JA/skills.html"><b>詳細はこちら</b></a>
                             </div>
                             <!-- end testi-meta -->
                         </div><!-- end testimonial -->
 
                         <div class="testimonial clearfix">
                             <div class="desc">
-                                <h3><i class="fa fa-quote-left"></i>经历(3/4)</h3>
-                                <p class="lead">ZNotes内容贡献<br><br><br><br></p>
+                                <h3><i class="fa fa-quote-left"></i>経験(3/4)</h3>
+                                <p class="lead">ZNotesコンテンツ投稿<br><br><br><br></p>
                             </div>
                             <div class="testi-meta">
-                                <a href="blogs_CN/experience.html"><b>查看更多</b></a>
+                                <a href="blogs_JA/experience.html"><b>詳細はこちら</b></a>
                             </div>
                             <!-- end testi-meta -->
                         </div><!-- end testimonial -->
 
                         <div class="testimonial clearfix">
                             <div class="desc">
-                                <h3><i class="fa fa-quote-left"></i>实习(4/4)</h3>
-                                <p class="lead">还没找到。<br>还在找一个！<br><br><br></p>
+                                <h3><i class="fa fa-quote-left"></i>インターンシップ（4/4）</h3>
+                                <p class="lead">まだ見つかりません。<br>まだ1つ探しています！<br><br><br></p>
                             </div>
                             <div class="testi-meta">
-                                <a href="blogs_CN/intern.html"><b>查看更多</b></a>
+                                <a href="blogs_JA/intern.html"><b>詳細はこちら</b></a>
                             </div>
                             <!-- end testi-meta -->
                         </div><!-- end testimonial -->
@@ -205,16 +205,16 @@
 		<div class="container">
 			<div class="section-title text-left">
                 <h3>作品集</h3>
-                <p>快速查看一下我的作品集</p>
+                <p>私の作品集を見てみましょう</p>
             </div><!-- end title -->
 			
 			<div class="gallery-menu row">
 				<div class="col-md-12">
 					<div class="button-group filter-button-group text-left">
-						<button class="active" data-filter="*">全部</button>
-						<button data-filter=".coding">编程</button>
-						<button data-filter=".video">影像</button>
-						<button data-filter=".audio">音频</button>
+						<button class="active" data-filter="*">すべて</button>
+						<button data-filter=".coding">プログラミング</button>
+						<button data-filter=".video">画像</button>
+						<button data-filter=".audio">オーディオ</button>
 					</div>
 				</div>
 			</div>
@@ -223,54 +223,54 @@
 
                 <div class="col-md-4 col-sm-6 gallery-grid coding">
 					<div class="gallery-single fix">
-						<img src="uploads/machineProject.png" class="img-fluid" alt="投资组合图">
+						<img src="uploads/machineProject.png" class="img-fluid" alt="ポートフォリオチャート">
 						<div class="img-overlay">
-							<a href="blogs_CN/MP_CS124.html" class="hoverbutton global-radius">GO</a>
+							<a href="blogs_JA/MP_CS124.html" class="hoverbutton global-radius">ゴー</a>
 						</div>
 					</div>
 				</div>
 
                			<div class="col-md-4 col-sm-6 gallery-grid coding">
 					<div class="gallery-single fix">
-						<img src="uploads/personalWebsite.png" class="img-fluid" alt="投资组合图">
+						<img src="uploads/personalWebsite.png" class="img-fluid" alt="ポートフォリオチャート">
 						<div class="img-overlay">
-							<a href="blogs_CN/personalWebsite.html" class="hoverbutton global-radius">GO</a>
+							<a href="blogs_JA/personalWebsite.html" class="hoverbutton global-radius">ゴー</a>
 						</div>
 					</div>
 				</div>
 
 				<div class="col-md-4 col-sm-6 gallery-grid video">
 					<div class="gallery-single fix">
-						<img src="uploads/vlog.png" class="img-fluid" alt="投资组合图">
+						<img src="uploads/vlog.png" class="img-fluid" alt="ポートフォリオチャート">
 						<div class="img-overlay">
-							<a href="blogs_CN/vlog.html" class="hoverbutton global-radius">GO</a>
+							<a href="blogs_JA/vlog.html" class="hoverbutton global-radius">ゴー</a>
 						</div>
 					</div>
 				</div>
 
                 <div class="col-md-4 col-sm-6 gallery-grid video">
 					<div class="gallery-single fix">
-						<img src="uploads/photography.png" class="img-fluid" alt="投资组合图">
+						<img src="uploads/photography.png" class="img-fluid" alt="ポートフォリオチャート">
 						<div class="img-overlay">
-							<a href="blogs_CN/photography.html" class="hoverbutton global-radius">GO</a>
+							<a href="blogs_JA/photography.html" class="hoverbutton global-radius">ゴー</a>
 						</div>
 					</div>
 				</div>
                 
                 <div class="col-md-4 col-sm-6 gallery-grid video">
 					<div class="gallery-single fix">
-						<img src="uploads/tutorial.png" class="img-fluid" alt="投资组合图">
+						<img src="uploads/tutorial.png" class="img-fluid" alt="ポートフォリオチャート">
 						<div class="img-overlay">
-							<a href="blogs_CN/tutorial.html" class="hoverbutton global-radius">GO</a>
+							<a href="blogs_JA/tutorial.html" class="hoverbutton global-radius">ゴー</a>
 						</div>
 					</div>
 				</div>
 
                 <div class="col-md-4 col-sm-6 gallery-grid audio">
 					<div class="gallery-single fix">
-						<img src="uploads/musicProduction.png" class="img-fluid" alt="投资组合图">
+						<img src="uploads/musicProduction.png" class="img-fluid" alt="ポートフォリオチャート">
 						<div class="img-overlay">
-							<a href="blogs_CN/musicProduction.html" class="hoverbutton global-radius">GO</a>
+							<a href="blogs_JA/musicProduction.html" class="hoverbutton global-radius">ゴー</a>
 						</div>
 					</div>
 				</div>
@@ -283,8 +283,8 @@
         <div id="contact" class="section db">
             <div class="container">
                 <div class="section-title text-left">
-                    <h3>联系我</h3>
-                    <p>很高兴能与您取得联系！ </p>
+                    <h3>連絡先</h3>
+                    <p>あなたと連絡が取れて嬉しいです！</p>
                 </div><!-- end title -->
     
                                 <form action="https://formspree.io/f/mzbqbwod" method="POST">
@@ -296,28 +296,28 @@
                                                     <div class="row">
                                                         <div class="col-md-6">
                                                             <div class="form-group">
-                                                                <input class="form-control" name="name" id="name" type="text" placeholder="姓名（必填）" required="required" data-validation-required-message="请输入您的姓名">
+                                                                <input class="form-control" name="name" id="name" type="text" placeholder="名前（必須）" required="required" data-validation-required-message="请输入您的姓名">
                                                                 <p class="help-block text-danger"></p>
                                                             </div>
                                                             <div class="form-group">
-                                                                <input class="form-control" name="email" id="email" type="email" placeholder="电子邮箱地址（必填）" required="required" data-validation-required-message="请输入您的电子邮箱地址">
+                                                                <input class="form-control" name="email" id="email" type="email" placeholder="電子メールアドレス（必須）" required="required" data-validation-required-message="请输入您的电子邮箱地址">
                                                                 <p class="help-block text-danger"></p>
                                                             </div>
                                                             <div class="form-group">
-                                                                <input class="form-control" name="subject" id="subject" placeholder="主题">
+                                                                <input class="form-control" name="subject" id="subject" placeholder="主題">
                                                                 <p class="help-block text-danger"></p>
                                                             </div>
                                                         </div>
                                                         <div class="col-md-6">
                                                             <div class="form-group">
-                                                                <textarea class="form-control" name="message" id="message" placeholder="留言（必填）" required="required" data-validation-required-message="请留言"></textarea>
+                                                                <textarea class="form-control" name="message" id="message" placeholder="メッセージ(必須)" required="required" data-validation-required-message="请留言"></textarea>
                                                                 <p class="help-block text-danger"></p>
                                                             </div>
                                                         </div>
                                                         <div class="clearfix"></div>
                                                         <div class="col-lg-12 text-center">
                                                             <div id="success"></div>
-                                                            <button id="sendMessageButton" class="sim-btn btn-hover-new" data-text="发送邮件" type="submit">发送邮件</button>
+                                                            <button id="sendMessageButton" class="sim-btn btn-hover-new" data-text="メールの送信" type="submit">メールの送信</button>
                                                         </div>
                                                     </div>
                                                 </form>
@@ -334,13 +334,13 @@
             <div class="footer-distributed">
                 <div class="footer-left">
                     <p class="footer-links">
-                        <a href="#">链接：</a>
-                        <a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0">哔哩哔哩</a>
+                        <a href="#">リンク：</a>
+                        <a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0">ビリビリ</a>
                         <a href="https://www.youtube.com/channel/UCBI1IZM1HK6PP9COneQXpog">YouTube</a>
-                        <a href="https://www.instagram.com/haozheli04/">Instagram</a>
-                        <a href="https://v.douyin.com/rtTTNA8/">抖音</a>
+                        <a href="https://www.instagram.com/haozheli04/">インスタグラム</a>
+                        <a href="https://v.douyin.com/rtTTNA8/">トレモロ音</a>
                         <select onchange="window.location=this.value;">
-                            <option value="">Please Select Your Language</option>
+                            <option value="">言語を選択してください</option>
                             <option value="index.html">Auto (Mirror Your Device)</option>
                             <option value="EN.html">English</option>
                             <option value="CN.html">中文</option>
@@ -349,7 +349,7 @@
                             <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=auto&_x_tr_tl=en&_x_tr_hl=en&_x_tr_pto=wapp">Other (Google Translate)</option>
                         </select>
                     </p>
-                    <p class="footer-company-name">版权所有 Copyright 2022<a href="#">李浩哲</a> <br>由<a href="https://github.io/">GitHub Pages</a> 与 <a href="https://www.haozheli.com/">我奇妙的大脑</a>提供强力支持</p>
+                    <p class="footer-company-name">著作権所有Copyright 2022<a href="#">李浩哲</a> <br>から<a href="https://github.io/">GitHub Pages</a> と <a href="https://www.haozheli.com/">私の奇妙な脳</a>強力なサポートを提供</p>
                 </div>
             </div>
         </div><!-- end container -->
@@ -370,7 +370,7 @@
     <!-- ALL PLUGINS -->
     <script src="js/custom.js"></script>
     <script src="js/jquery.vide.js"></script>
-    <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
+    <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async=""></script>
 
 </body>
 </html>
