--- a/CN.html
+++ b/CN.html
@@ -340,7 +340,7 @@
                         <a href="https://www.instagram.com/haozheli04/">Instagram</a>
                         <a href="https://v.douyin.com/rtTTNA8/">抖音</a>
                         <select onchange="window.location=this.value;">
-                            <option value="">Please Select Your Language</option>
+                            <option value="">请选择您的语言</option>
                             <option value="index.html">Auto (Mirror Your Device)</option>
                             <option value="EN.html">English</option>
                             <option value="CN.html">中文</option>
