--- a/blogs_JA/intern.html
+++ b/blogs_JA/intern.html
@@ -463,7 +463,7 @@
 
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">まだ何もない！何か良いアイデアがあれば教えてください！</p>
 
-                    <a href="https://www.haozheli.com/EN.html#contact">
+                    <a href="https://www.haozheli.com/JA.html#contact">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">接触</button>
                     </a>
                 </div>
