--- a/blogs_KO/intern.html
+++ b/blogs_KO/intern.html
@@ -463,7 +463,7 @@
 
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">아직 아무것도 없어요!좋은 아이디어가 있으면 알려주세요!</p>
 
-                    <a href="https://www.haozheli.com/EN.html#contact">
+                    <a href="https://www.haozheli.com/KO.html#contact">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">연락처</button>
                     </a>
                 </div>
