--- a/blogs_KO/znotes.html
+++ b/blogs_KO/znotes.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
     <head>
-<title>지노트 컨트리뷰션</title>
+<title>Znotes컨트리뷰션</title>
 <link rel="shortcut icon" href="favicon.ico">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
