--- a/CN.html
+++ b/CN.html
@@ -124,9 +124,7 @@
                         <h2><b>关于我</b></h2>
                         <p>大家好，我是李浩哲，或者叫我的英文名Howard，我是伊利诺伊大学计算机科学和音乐专业的学生。“一个热爱编程的大提琴手”是可以定义我的最准确的说法。我从小就学习大提琴，并且作为首席大提琴手参加交响乐团快10年了。进入大学生活后，我逐渐对计算机编程产生了兴趣，并开始学习Python、Java等编程语言。</p>
 						<p>与此同时，我还是一名个人视频创作者。我经常在哔哩哔哩和Youtube上上传VLOG和视频特效的教程，并获得了数百万次观看。</p>
-                        <p>快速链接：</p>
-                        <a href="#contact" class="sim-btn btn-hover-new" data-text="VIEW MORE"><span>联系</span></a>
-                        <a href="#resume" class="sim-btn btn-hover-new" data-text="VIEW MORE"><span>简历</span></a>
+                        <a onclick='return confirm("很高兴见到你我的朋友！祝你天天开心")' class="sim-btn btn-hover-new" data-text="Hi"><span>向我打招呼</span></a>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 
