--- a/EN.html
+++ b/EN.html
@@ -126,9 +126,7 @@
                         <h2><b>ABOUT ME</b></h2>
                         <p> Hi, I'm Haozhe Li, or Howard, and I'm a computer science and music major at the University of Illinois.	"A cellist who loves programming" is the most accurate statement that can define me. I have studied cello since I was a child and participated in symphony orchestras for almost 10 years as a principal cellist. After entering college life, I gradually became interested in computer programming and began to learn programming languages such as Python and Java.</p>
 						<p> I am also a personal video creator, I often upload tutorials on VLOG, cinematic shots and video editing effects on Bilibili and Youtube， and have received millions of views.</p>
-                        <p>Quick Links: </p>
-                        <a href="#contact" class="sim-btn btn-hover-new" data-text="VIEW MORE"><span>CONTACT</span></a>
-                        <a href="#resume" class="sim-btn btn-hover-new" data-text="VIEW MORE"><span>RESUME</span></a>
+                        <a onclick='return confirm("Good to see you my friend, hope you have a wonderful day! ")' class="sim-btn btn-hover-new" data-text="Hi"><span>SAY HI TO ME</span></a>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 
