--- a/JA.html
+++ b/JA.html
@@ -125,8 +125,7 @@
                         <p>こんにちは。私は李浩哲です。英語名をハワードと呼んでいます。イリノイ大学のコンピュータ科学と音楽を専攻しています。「プログラミングが大好きなチェリスト」は、私を定義する最も正確な表現です。私は小さい頃からチェロを習っていて、コンサートチェリストとして交響楽団に参加してもうすぐ10年になります。大学生活に入ると次第にコンピュータプログラミングに興味を持ち、PythonやJavaなどのプログラミング言語を学ぶようになりました。</p>
 						<p>同時に、個人の動画クリエイターとしても活動しています。ビリビリやYoutubeでVLOGやビデオ特殊効果のチュートリアルを頻繁にアップしていて、何百万回も視聴されています。</p>
                         <p>クイックリンク：</p>
-                        <a href="#contact" class="sim-btn btn-hover-new" data-text="VIEW MORE"><span>つながり</span></a>
-                        <a href="#resume" class="sim-btn btn-hover-new" data-text="VIEW MORE"><span>履歴書</span></a>
+                        <a onclick='return confirm("お会いできて嬉しいです！素敵な一日をお過ごしください。")' class="sim-btn btn-hover-new" data-text="Hi"><span>よろしくお願いします</span></a>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 
