--- a/KO.html
+++ b/KO.html
@@ -125,8 +125,7 @@
                         <p>안녕하세요, 저는 이호철, 혹은 제 영어 이름인 Howard라고 합니다. 저는 일리노이 대학에서 컴퓨터 과학과 음악을 전공하고 있는 학생입니다.프로그래밍을 사랑하는 첼리스트가 나를 정의할 수 있는 가장 정확한 표현이다.저는 어릴 때부터 첼로를 배웠고 교향악단에 수석 첼리스트로 참여한 지 10년이 다 되어갑니다.대학 생활에 들어가면서 점차 컴퓨터 프로그래밍에 관심을 갖게 됐고 파이썬(Python), 자바(Java) 등 프로그래밍 언어를 배우기 시작했다.</p>
 						<p>한편, 저는 개인 비디오 크리에이터로도 활동하고 있습니다.삐리삐리와 유튜브에 VLOG와 동영상 특수효과에 대한 튜토리얼을 자주 올렸고 수백만 건의 시청을 얻었다.</p>
                         <p>빠른 링크</p>
-                        <a href="#contact" class="sim-btn btn-hover-new" data-text="VIEW MORE"><span>연락</span></a>
-                        <a href="#resume" class="sim-btn btn-hover-new" data-text="VIEW MORE"><span>이력서</span></a>
+                        <a onclick='return confirm("만나서 반가워 친구야, 좋은 하루 보내길 바래!")' class="sim-btn btn-hover-new" data-text="Hi"><span>나에게 인사</span></a>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 
