--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="#contact">CONTACT</a>
               </li>   
-          </ul> 
+          </ul>
         </div>
       </div>
     </nav>
@@ -126,9 +126,7 @@
                         <h2><b>ABOUT ME</b></h2>
                         <p> Hi, I'm Haozhe Li, or Howard, and I'm a computer science and music major at the University of Illinois.	"A cellist who loves programming" is the most accurate statement that can define me. I have studied cello since I was a child and participated in symphony orchestras for almost 10 years as a principal cellist. After entering college life, I gradually became interested in computer programming and began to learn programming languages such as Python and Java.</p>
 						<p> I am also a personal video creator, I often upload tutorials on VLOG, cinematic shots and video editing effects on Bilibili and Youtube， and have received millions of views.</p>
-                        <p>Quick Links: </p>
-                        <a href="#contact" class="sim-btn btn-hover-new" data-text="VIEW MORE"><span>CONTACT</span></a>
-                        <a href="#resume" class="sim-btn btn-hover-new" data-text="VIEW MORE"><span>RESUME</span></a>
+                        <a onclick='return confirm("Good to see you my friend, hope you have a wonderful day! ")' class="sim-btn btn-hover-new" data-text="Hi"><span>SAY HI TO ME</span></a>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 
@@ -302,11 +300,11 @@
                                                 <div class="row">
                                                     <div class="col-md-6">
                                                         <div class="form-group">
-                                                            <input class="form-control" name="name" id="name" type="text" placeholder="Your Name" required="required" data-validation-required-message="Please enter your name.">
+                                                            <input class="form-control" name="name" id="name" type="text" placeholder="Your Name (Required)" required="required" data-validation-required-message="Please enter your name.">
                                                             <p class="help-block text-danger"></p>
                                                         </div>
                                                         <div class="form-group">
-                                                            <input class="form-control" name="email" id="email" type="email" placeholder="Your Email" required="required" data-validation-required-message="Please enter your email address.">
+                                                            <input class="form-control" name="email" id="email" type="email" placeholder="Your Email (Required)" required="required" data-validation-required-message="Please enter your email address.">
                                                             <p class="help-block text-danger"></p>
                                                         </div>
                                                         <div class="form-group">
@@ -316,7 +314,7 @@
                                                     </div>
                                                     <div class="col-md-6">
                                                         <div class="form-group">
-                                                            <textarea class="form-control" name="message" id="message" placeholder="Your Message" required="required" data-validation-required-message="Please enter a message."></textarea>
+                                                            <textarea class="form-control" name="message" id="message" placeholder="Your Message (Required)" required="required" data-validation-required-message="Please enter a message."></textarea>
                                                             <p class="help-block text-danger"></p>
                                                         </div>
                                                     </div>
