--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 					<a href="https://github.io/">Github Pages</a> and <a href="https://www.haozheli.com/">My Fantastic Brain</a></p>
                 </div>
             </div>
-        </div><!-- end container -->
+        </div><!-- end container --
     </div><!-- end copyrights -->
 
     <a href="#" id="scroll-to-top" class="dmtop global-radius"><i class="fa fa-angle-up"></i></a>
