--- a/KO.html
+++ b/KO.html
@@ -370,7 +370,7 @@
     <script src="js/custom.js"></script>
     <script src="js/jquery.vide.js"></script>
     <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async=""></script>
-    <script> alert("This page is translated using Google. Although I spent a lot of time proofreading, there will always be some parts that are strange to read. I do apologize for it. If you mind it very much, please read my website in English or Chinese. To change your language in this site, please visit the bottom of this page at the footer.") </script>
+    <script> alert("You were redirected to the Japanese language (this may have been automatic, or you may have changed it manually). This page is translated using Google. Although I spent a lot of time proofreading, there will always be some parts that are strange to read. I do apologize for it. If you mind it very much, please read my website in English or Chinese. To change your language in this site, please visit the bottom of this page at the footer.") </script>
 
 </body>
 </html>
