--- a/JA.html
+++ b/JA.html
@@ -123,7 +123,7 @@
                     <div class="message-box">                        
                         <h2><b>私について</b></h2>
                         <p>こんにちは。私は李浩哲です。英語名をハワードと呼んでいます。イリノイ大学のコンピュータ科学と音楽を専攻しています。「プログラミングが大好きなチェリスト」は、私を定義する最も正確な表現です。私は小さい頃からチェロを習っていて、コンサートチェリストとして交響楽団に参加してもうすぐ10年になります。大学生活に入ると次第にコンピュータプログラミングに興味を持ち、PythonやJavaなどのプログラミング言語を学ぶようになりました。</p>
-						<p>同時に、個人の動画クリエイターとしても活動しています。ビリビリやYoutubeでVLOGやビデオ特殊効果のチュートリアルを頻繁にアップしていて、何百万回も視聴されています。</p>
+						<p>同時に、個人の動画クリエイターとしても活動しています。bilibiliやYoutubeでVLOGやビデオ特殊効果のチュートリアルを頻繁にアップしていて、何百万回も視聴されています。</p>
                         <p>クイックリンク：</p>
                         <a onclick='return confirm("お会いできて嬉しいです！素敵な一日をお過ごしください。")' class="sim-btn btn-hover-new" data-text="Hi"><span>よろしくお願いします</span></a>
                     </div><!-- end messagebox -->
@@ -334,7 +334,7 @@
                 <div class="footer-left">
                     <p class="footer-links">
                         <a href="#">リンク：</a>
-                        <a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0">ビリビリ</a>
+                        <a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0">bilibili</a>
                         <a href="https://www.youtube.com/channel/UCBI1IZM1HK6PP9COneQXpog">YouTube</a>
                         <a href="https://www.instagram.com/haozheli04/">インスタグラム</a>
                         <a href="https://v.douyin.com/rtTTNA8/">トレモロ音</a>
