--- a/blogs_CN/qingdaoSummer.html
+++ b/blogs_CN/qingdaoSummer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-<title>Qingdao Summer</title>
+<title>夏日青岛</title>
 <link rel="shortcut icon" href="favicon.ico">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -458,7 +458,7 @@
             <div class="w-full md:w-1/2 bg-white flex items-center justify-center">
                 <div class="max-w-sm m-8">
                     <div class="text-black text-5xl md:text-15xl font-black">
-                        QINGDAO SUMMER                   </div>
+                        夏日青岛                   </div>
 
                     <div class="w-16 h-1 bg-purple-light my-3 md:my-6"></div>
 
