--- a/blogs_JA/MP_CS124.html
+++ b/blogs_JA/MP_CS124.html
@@ -464,7 +464,7 @@
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">マシンプロジェクトはCS124の非常に重要な部分であり、私のお気に入りのパーツの1つです。MP3では、Androidプログラムにいくつかのカスタム機能を追加できます。これが私の機能の紹介とAndroidプログラムのデモです</p>
 
                     <a href="https://www.bilibili.com/video/BV1ad4y1s7yu/?vd_source=50c60dd066c2d71108664951f25b60a4">
-                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">ビリビリ</button>
+                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">bilibili</button>
                     </a>
 
                     <p><br></p>
