--- a/blogs_JA/qingdaoSummer.html
+++ b/blogs_JA/qingdaoSummer.html
@@ -466,7 +466,7 @@
                     <p><br></p>    
 
                     <a href="https://www.bilibili.com/video/BV1ba411u79C/">
-                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">ビリビリ</button>
+                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">bilibili</button>
                     </a>
 
                     <p><br></p>
