--- a/blogs/beijingWinter.html
+++ b/blogs/beijingWinter.html
@@ -1,7 +1,7 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
-<title>ドルビービジョンのiPhone 14 Pro</title>
+<title>Beijing Winter</title>
 <link rel="shortcut icon" href="favicon.ico">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -457,30 +457,36 @@
         <div class="md:flex min-h-screen">
             <div class="w-full md:w-1/2 bg-white flex items-center justify-center">
                 <div class="max-w-sm m-8">
-                    <div class="text-black text-5xl md:text-15xl font-black">ドルビービジョンのiPhone 14 Pro</div>
+                    <div class="text-black text-5xl md:text-15xl font-black">
+                        Beijing Winter | Cinematic Vlog| Shot by Huawei in 4K                    </div>
 
                     <div class="w-16 h-1 bg-purple-light my-3 md:my-6"></div>
 
-                    <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">iPhone 14 Proで撮影したドルビービジョン4K60fpsのテストビデオをお楽しみください</p>
+                    <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
+                        Please watch in following links~</p>
 
-                    <a href="https://www.bilibili.com/video/BV1p14y1Y7Ph/">
-                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">bilibili</button>
+                    <a href="https://www.bilibili.com/video/BV1Ha411y7Zf/">
+                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
+                            BILIBILI
+                        </button>
                     </a>
 
                     <p><br></p>
 
-                    <a href="https://www.youtube.com/watch?v=Rvs9-87UaoY&t=23s">
-                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">ユーチューブ</button>
+                    <a href="https://youtu.be/oCwKQ6UFWYA">
+                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
+                            YOUTUBE
+                        </button>
                     </a>
 
                 </div>
             </div>
 
             <div class="relative pb-full md:flex md:pb-0 md:min-h-screen w-full md:w-1/2">
-                <div style="background-image: url('https://www.haozheli.com/uploads/iphone14.jpeg');" class="absolute pin bg-cover bg-no-repeat md:bg-left lg:bg-center">
+                <div style="background-image: url('https://www.haozheli.com/uploads/beijing.jpeg');" class="absolute pin bg-cover bg-no-repeat md:bg-left lg:bg-center">
 </div>
             </div>
         </div>
-        <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async=""></script>
+        <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
     </body>
 </html>
