--- a/blogs_JA/automation.html
+++ b/blogs_JA/automation.html
@@ -464,7 +464,7 @@
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">このチュートリアルでは、DaVinci Resolveを使って、自動カラーグレーディング、自動コンポジション、その他の機能を使って映画やビデオを効率的に制作する方法を実演しました。</p>
 
                     <a href="https://www.bilibili.com/video/BV1pu41167CU/">
-                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">ビリビリ</button>
+                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">bilibili</button>
                     </a>
 
                     <p><br></p>
