--- a/blogs_JA/despacito.html
+++ b/blogs_JA/despacito.html
@@ -464,7 +464,7 @@
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">2020年の冬、「Despacito」をディクテーションしてからコンピューターソフトウェアを使って自分で改作し、チェロで演奏しました。さらに、監督としてセットをデザインし、ミュージックビデオを録音しました。</p>
 
                     <a href="https://www.bilibili.com/video/BV1SJ411J76M/">
-                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">ビリビリ</button>
+                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">bilibili</button>
                     </a>
 
                     <p><br></p>
