--- a/blogs_JA/magicmask.html
+++ b/blogs_JA/magicmask.html
@@ -464,7 +464,7 @@
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">このチュートリアルでは、DaVinci Resolveを使ってMagicMaskの基本的なユーティリティを実演しました。</p>
 
                     <a href="https://www.bilibili.com/video/BV1yb4y1b7rf/">
-                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">ビリビリ</button>
+                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">bilibili</button>
                     </a>
 
                     <p><br></p>
