--- a/blogs_JA/slomotion.html
+++ b/blogs_JA/slomotion.html
@@ -464,7 +464,7 @@
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">このチュートリアルでは、DaVinci Resolveを使って、スピードワープ機能を使ってスローモーション後のビデオクリップを作成する方法を説明しました。</p>
 
                     <a href="https://www.bilibili.com/video/BV1iq4y1m7fj/">
-                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">ビリビリ</button>
+                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">bilibili</button>
                     </a>
 
                     <p><br></p>
