--- a/blogs_JA/visualEffects.html
+++ b/blogs_JA/visualEffects.html
@@ -464,7 +464,7 @@
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">このチュートリアルでは、DaVinci Resolveを使って、90秒でトラッカー機能をフュージョンするだけで済む3つの素晴らしい視覚効果を実演しました。</p>
 
                     <a href="https://www.bilibili.com/video/BV13q4y1g7qB/">
-                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">ビリビリ</button>
+                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">bilibili</button>
                     </a>
 
                     <p><br></p>
