--- a/blogs_CN/coursera.html
+++ b/blogs_CN/coursera.html
@@ -487,6 +487,16 @@
                         </button>
                     </a>
 
+                    <p><br></p>
+
+                    <a href="https://www.coursera.org/learn/machine-learning">
+                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
+                            监督机器学习：回归与分类（正在学习中）
+                        </button>
+                    </a>
+
+
+
                 </div>
             </div>
 
