--- a/blogs_JA/coursera.html
+++ b/blogs_JA/coursera.html
@@ -478,6 +478,14 @@
                     <a href="https://coursera.org/share/af43fc0a0b9fd68cf0698dba7b6ef482">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">Pythonを使ってオペレーティングシステムと対話する</button>
                     </a>
+                    
+                    <p><br></p>
+
+                    <a href="https://www.coursera.org/learn/machine-learning">
+                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
+                            教師あり機械学習：回帰と分類（進行中）
+                        </button>
+                    </a>
 
                 </div>
             </div>
