--- a/blogs_KO/coursera.html
+++ b/blogs_KO/coursera.html
@@ -479,6 +479,14 @@
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">Python을 사용하여 운영 체제와 상호 작용하기</button>
                     </a>
 
+                    <p><br></p>
+
+                    <a href="https://www.coursera.org/learn/machine-learning">
+                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
+                            지도 머신 러닝: 회귀 및 분류(진행 중)
+                        </button>
+                    </a>
+
                 </div>
             </div>
 
