--- a/blogs/coursera.html
+++ b/blogs/coursera.html
@@ -487,6 +487,14 @@
                         </button>
                     </a>
 
+                    <p><br></p>
+
+                    <a href="https://www.coursera.org/learn/machine-learning">
+                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
+                            Supervised Machine Learning: Regression and Classification (In Progress)
+                        </button>
+                    </a>
+
                 </div>
             </div>
 
